<resources>
    <string name="app_name">Primera Calculadora</string>
    <string name="textoInicio">0</string>
    <string name="clear">C</string>
    <string name="signo">+/-</string>
    <string name="porcentaje">%</string>
    <string name="menos">-</string>
    <string name="mas">+</string>
    <string name="igual">=</string>
    <string name="divide">/</string>
    <string name="coma">,</string>
    <string name="por">X</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="del">DEL</string>
    <string name="parentD">)</string>
    <string name="parentI">(</string>

</resources>